<resources>
    <string name="app_name">Switch and BottomNavigationBar App</string>
    <string name="switch_happy">Happy</string>
    <string name="switch_money">Money</string>
    <string name="switch_peace">Peace</string>
    <string name="switch_friend">Friend</string>
    <string name="switch_evolution">Evolution</string>
    <string name="switch_unknown">Unknown</string>
    <string name="welcome_fragment">Welcome To %1$s Fragment</string>
    <string name="main_screen">Main Screen</string>
    <string name="this_is_the_main_screen">This is the Main Screen</string>
</resources>